--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/xml2js": "^0.4.14",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "typescript": "^5.8.3",
     "xml2js": "^0.6.2"
   }
 }
