I believe in progress

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 BUS_API_KEY=
 S3_BUCKET=
 
-BUS_STOP_A_LINEREFS=
+BUS_STOP_A_LINEREFS= (array of strings, do not encapsulate in quotations)
 BUS_STOP_A_LATITUDE=
 BUS_STOP_A_LONGITUDE=
 
-BUS_STOP_B_LINEREFS=
+BUS_STOP_B_LINEREFS= (array of strings)
 BUS_STOP_B_LATITUDE=
 BUS_STOP_B_LONGITUDE=
