env file update

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BUS_API_KEY=
-S3_BUCKET=
+GOOGLE_MAPS_API_KEY=
 
 BUS_STOP_A_LINEREFS= (array of strings, do not encapsulate in quotations)
 BUS_STOP_A_LATITUDE=
